# hadoop-config-project

./: .gitignore  Dockerfile.agent  Dockerfile.checker  Dockerfile.hive  README.md  Troubleshooting.md  diagnose-namenode.sh  docker-compose.override.yml  docker-compose.yml  hadoop.env  init-hdfs.sh  plan.md  pyproject.toml  testing-upgrades.md
checker/: __init__.py  __main__.py  agent.py  cli.py  consumer.py  models.py
checker/analysis/: __init__.py  causality_graph.py  drift_detector.py  validator.py
checker/collectors/: env_collector.py  spark_collector.py  xml_collector.py
conf/: core-site.xml  hadoop.env  hdfs-site.xml  hive-site.xml  mapred-site.xml  spark-defaults.conf
docs/: architecture.md  causality-graph.md  limitations.md  operations.md  rules.md  usage.md
postgres/: init.sql
rules/: causality-graph.yaml  hadoop-3.3.x.yaml
tests/: 01-hdfs.sh  02-yarn-pi.sh  03-hive.sh  04-kafka.sh  05-zookeeper.sh  06-spark-yarn.sh  07-checker-drift.sh  08-multi-agent-propagation.sh  09-cross-service-constraint.sh  10-causality-trace.sh  demo.sh  diagnose-rule-eval.sh  evaluate.sh  run-all.sh
tests/checker/: conftest.py  test_agent.py  test_causality_graph.py  test_cli.py  test_cli_subprocess.py  test_consumer.py  test_drift_detector.py  test_env_collector.py  test_false_positives.py  test_graph_contract.py  test_integration.py  test_jvm_flags_propagation.py  test_missing_keys.py  test_models.py  test_must_reference.py  test_rule_matrix.py  test_silent_agent.py  test_spark_collector.py  test_validator.py  test_xml_collector.py
tests/checker/fixtures/: expected-graph-edges.yaml  hadoop-3.3.x.yaml
tests/checker/fixtures/conf/: yarn-site.xml
tests/configs/buggy/: README.md
tests/configs/buggy/dual-source-disagreement/: README.md  metadata.env
tests/configs/buggy/hive-warehouse-wrong-namenode/: README.md  hive-site.xml  metadata.env
tests/configs/buggy/replication-exceeds-max/: README.md  hdfs-site.xml  metadata.env
tests/configs/buggy/spark-fs-mismatch/: README.md  (+3 more)
tests/configs/clean/: hdfs-site.xml
(+3 files in other folders)
